adjusted delete entry button modal and added animation. Made BrewerySearch Modal Header Sticky and fixed page shift on close

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,21 +24,20 @@
   --empty-channels-black2: color(rec2020);
 } */
 body {
-  /* max-height: 100vh;
-  max-width: 100vw;
-  background-repeat: no-repeat;
-  background-size: cover; */
   background-color: color(display-p3 1 0.717 0.039 / 1);
+
   /* background-color: hsl(48deg 95% 59%); */
   /* background-color: wheat; */
   /* background-color: color(rec2020 90% 86% 35%); */
   /* background-color: lch(82.9% 72 88); */
 }
 
+/* overflow-y: scroll !important;
+padding: 0px !important; */
 html {
-  margin: 0;
-  height: 100%;
-  padding: none;
+  padding-right: 0px !important;
+  overflow-y: scroll !important;
+  overflow-x: scroll !important;
 }
 
 .city-search-reset-button {
